# rfid-log-archiver

./: CMakeLists.txt  README.md  main.py  requirements.txt
include/: ArchiveProcess.h  LogArgumentDirectory.h  RFIDLog.h
src/: ArchiveProcess.cpp  Main.cpp
